k8s/infra/common/observability/loki/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: &network internal
    gethomepage.dev/name: Loki
    gethomepage.dev/icon: loki.svg
    gethomepage.dev/description: ""
    gethomepage.dev/app: "loki"
spec:
  parentRefs:
    - name: *network
      namespace: kube-system
      sectionName: https
  hostnames:
    - loki.${MAIN_DOMAIN}
  rules:
    - backendRefs:
        - name: loki-headless
          port: 3100
